# namegnome-serve

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN_CLARIFICATIONS.md  MCP_TOOL_GUIDE.md  MEDIA_CONVENTIONS.md  PLAN.md  README.md  TASKS_SPRINTS_1-4.md  TASKS_SPRINTS_5-8.md  env.example  pyproject.toml
.github/workflows/: ci.yml
docs/: MPV_SCRAPER_ANALYSIS.md
models/namegnome/: Modelfile
schemas/: plan_review.schema.json
scripts/: lc_sanity.py  run_tests_with_timing.py  timing_diagnostics.py  verify_toolchain.py
src/namegnome_serve/cache/: __init__.py  paths.py  provider_cache.py  schema.sql
src/namegnome_serve/chains/: apply_chain.py  fuzzy.py  plan_chain.py
src/namegnome_serve/cli/: __init__.py  cache.py  plan.py
src/namegnome_serve/core/: anthology.py  constants.py  deterministic_mapper.py  episode_fetcher.py  errors.py  llm_mapper.py  parser.py  plan_engine.py  plan_review.py  plan_service.py  scanner.py
src/namegnome_serve/fs/: __init__.py  fs_ops.py  manifest.py  paths.py
src/namegnome_serve/routes/: schemas.py
src/namegnome_serve/utils/: debug.py
tests/: conftest.py  test_anidb_provider.py  test_cache.py  test_cli_plan.py  test_debug_utility.py  test_deterministic_mapper.py  test_deterministic_mapper_fallback.py  test_errors.py  test_fanarttv_provider.py  test_llm_mapper.py  test_musicbrainz_integration.py  test_musicbrainz_provider.py  test_namegnome_model.py  test_ollama_integration.py  test_omdb_integration.py  test_omdb_provider.py  test_plan_anthology_integration.py  test_plan_engine.py  test_plan_service.py  test_provider_retry.py  test_provider_timing.py  test_scanner.py  test_schemas.py  test_smoke.py  test_tmdb_integration.py  test_tmdb_provider.py  test_tvdb_integration.py  test_tvdb_provider.py  test_tvmaze_integration.py  test_uncertainty_flags.py
tests/cache/: test_migration_runner.py
tests/chains/: test_apply_chain.py  test_fuzzy_chain_builder.py  test_plan_chain.py
tests/cli/: test_cache_cli.py  test_plan_cli.py
tests/core/: test_constants.py  test_deterministic_mapper.py  test_episode_candidate_fetcher.py  test_interval_simplifier.py  test_namegnome_model.py  test_parser.py  test_parser_edge_cases.py  test_plan_anthology_integration.py  test_plan_engine.py  test_plan_service.py  test_planreview_contract.py  test_scanner.py  test_scanner_edge_cases.py
tests/fixtures/: plan_review_example.json
tests/fs/: test_fs_ops.py
tests/metadata/providers/: test_omdb_integration.py  test_provider_base.py  test_provider_retry.py  test_theaudiodb_integration.py  test_theaudiodb_provider.py  test_tvmaze_provider.py
tests/mocks/tv/: TV_Test_Expectations.md  fixture_manifest.yaml
(+18 files in other folders)
